--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -5,7 +5,7 @@
     "favicon": "{{ shop.brand.logo }}",
     "type_header_font": "sans-serif",
     "heading_scale": 100,
-    "type_body_font": "mono",
+    "type_body_font": "sans-serif",
     "body_scale": 100,
     "page_width": 1200,
     "spacing_sections": 0,
@@ -14,7 +14,7 @@
     "animations_hover_elements": "vertical-lift",
     "buttons_border_thickness": 1,
     "buttons_border_opacity": 100,
-    "buttons_radius": 0,
+    "buttons_radius": 12,
     "buttons_shadow_opacity": 0,
     "buttons_shadow_horizontal_offset": 0,
     "buttons_shadow_vertical_offset": 4,
